--- a/assets/headless.css
+++ b/assets/headless.css
@@ -2,6 +2,11 @@
   display: none;
 }
 
+#shopify-section-template--15747800203434__image_banner {
+  margin-top: 0px;
+  padding-top: 0px;
+}
+
 .product .accordion {
   background-color: #f9f8fa;
   color: #444;
