--- a/assets/headless.scss
+++ b/assets/headless.scss
@@ -3,6 +3,15 @@
   display: none;
 }
 
+// HOMEPAGE
+
+// -- banner
+
+#shopify-section-template--15747800203434__image_banner {
+  margin-top: 0px;
+  padding-top: 0px;
+}
+
 // Product
 
 .product {
