removing the zoom on product images on product pages

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -32,13 +32,22 @@
   gtag('config', 'AW-10876295106');
 </script>
 
-<!-- Event snippet for Google Shopping App Page View conversion page -->
+<!-- Event snippet for Google Shopping App Add To Cart conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
 <script>
+function gtag_report_conversion(url) {
+  var callback = function () {
+    if (typeof(url) != 'undefined') {
+      window.location = url;
+    }
+  };
   gtag('event', 'conversion', {
-      'send_to': 'AW-10876295106/4iR-COXhzL4DEMKvnMIo',
+      'send_to': 'AW-10876295106/nhldCO7hzL4DEMKvnMIo',
+      'event_callback': callback
   });
+  return false;
+}
 </script>
-
 
 
 
