removing the zoom on product images on product pages

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1155,3 +1155,8 @@ a.product__text {
   display: block;
   padding-bottom: 100%;
 }
+
+/* HEADLESS CUSTOM CSS */
+
+.product__media-toggle {display: none !important;}
+.product__modal-opener .product__media-icon {display: none !important;}
