Bucket Hat Landing Page => working on "image with text" section

--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -1,3 +1,9 @@
+<!-- Event snippet for Google Shopping App Add To Cart conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-10876295106/nhldCO7hzL4DEMKvnMIo'});
+</script>
+
+
 {{ 'component-cart.css' | asset_url | stylesheet_tag }}
 {{ 'component-cart-items.css' | asset_url | stylesheet_tag }}
 {{ 'component-totals.css' | asset_url | stylesheet_tag }}
