--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1,3 +1,10 @@
+<!-- Event snippet for Google Shopping App View Item conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-10876295106/QpN7COvhzL4DEMKvnMIo',
+  });
+</script>
+
 {% comment %}theme-check-disable TemplateLength{% endcomment %}
 {{ 'section-main-product.css' | asset_url | stylesheet_tag }}
 {{ 'component-accordion.css' | asset_url | stylesheet_tag }}
