--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -10,6 +10,54 @@
     <link rel="canonical" href="{{ canonical_url }}">
     <link rel="preconnect" href="https://cdn.shopify.com" crossorigin>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NPSXG0G6NL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NPSXG0G6NL');
+</script>
+    
+
+<!-- Global site tag (gtag.js) - Google Ads: 10876295106 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10876295106"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-10876295106');
+</script>
+
+<!-- Event snippet for Google Shopping App Page View conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-10876295106/4iR-COXhzL4DEMKvnMIo',
+  });
+</script>
+
+
+
+
+    
+
+
+<!-- Hotjar Tracking Code for https://nephitenation.com/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3093479,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
+
     {%- if settings.favicon != blank -%}
       <link rel="icon" type="image/png" href="{{ settings.favicon | image_url: width: 32, height: 32 }}">
     {%- endif -%}
@@ -211,19 +259,10 @@
     </script>
   {% capture boostersnippet %}{% include "booster-apps-common" %}{% endcapture %}{% unless boostersnippet contains "Liquid error" %}{{ boostersnippet }}{% endunless %}
 
-    <!-- HEADLESS TEAM -->
+    <!-- Headless team -->
     {{ 'headless.css' | asset_url | stylesheet_tag }}
     <script src="{{ 'headless.js' | asset_url }}" defer="defer"></script>
-
-
-    <!-- GSAP -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
-    <!-- END GSAP -->
-
-
-
-    <!-- /HEADLESS TEAM -->
+    <!-- /Headless team -->
 
 </head>
 
@@ -277,5 +316,8 @@
     {%- if settings.predictive_search_enabled -%}
       <script src="{{ 'predictive-search.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
+
+
+    {% include 'custom-fonts' %}
   </body>
 </html>
