--- a/sections/image-with-text_headless.liquid
+++ b/sections/image-with-text_headless.liquid
@@ -386,6 +386,11 @@
           "type": "url",
           "id": "button_link",
           "label": "t:sections.image-with-text.blocks.button.settings.button_link.label"
+        },
+        {
+          "type": "color",
+          "id": "button_color",
+          "label": "Button background color"
         }
       ]
     }
