--- a/sections/hd-img-w-text.liquid
+++ b/sections/hd-img-w-text.liquid
@@ -1,3 +1,4 @@
+{% include 'spurit_po2_section_snippet', product: all_products[section.settings.product], products: null %}
 <div class="hd_img_w_text-container">
   <div class="hd_img_w_text">
     <div class="hd_img_w_text-img">
