--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -76,11 +76,11 @@
           {%- endif -%}
         </div>
       {%- endif -%}
-    {%- endpaginate -%}
+    {% assign sp_paginate_by = paginate.page_size %}{%- endpaginate -%}
   </div>
 </div>
 
-{% schema %}
+{% if sp_paginate_by %}{% render 'spurit_po2_collection_template_snippet', paginate_by: sp_paginate_by %}{% endif %}{% schema %}
 {
   "name": "t:sections.main-collection-product-grid.name",
   "class": "section",
