--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -2,7 +2,7 @@
 <html class="no-js" lang="{{ request.locale.iso_code }}">
   <head>
 
-
+    <script src="https://cdn.tailwindcss.com"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,51 +11,55 @@
     <link rel="preconnect" href="https://cdn.shopify.com" crossorigin>
 
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NPSXG0G6NL"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NPSXG0G6NL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-  gtag('config', 'G-NPSXG0G6NL');
-</script>
-    
-
-<!-- Global site tag (gtag.js) - Google Ads: 10876295106 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10876295106"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-10876295106');
-</script>
-
-<!-- Event snippet for Google Shopping App Page View conversion page -->
-<script>
-  gtag('event', 'conversion', {
-      'send_to': 'AW-10876295106/4iR-COXhzL4DEMKvnMIo',
-  });
-</script>
+      gtag('config', 'G-NPSXG0G6NL');
+    </script>
 
 
+    <!-- Global site tag (gtag.js) - Google Ads: 10876295106 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10876295106"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'AW-10876295106');
+    </script>
+
+    <!-- Event snippet for Google Shopping App Page View conversion page -->
+    <script>
+      gtag('event', 'conversion', {'send_to': 'AW-10876295106/4iR-COXhzL4DEMKvnMIo'});
+    </script>
 
 
-    
 
-
-<!-- Hotjar Tracking Code for https://nephitenation.com/ -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:3093479,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+    <!-- Hotjar Tracking Code for https://nephitenation.com/ -->
+    <script>
+      (function(h, o, t, j, a, r) {
+        h.hj = h.hj || function() {
+          (h.hj.q = h.hj.q || []).push(arguments)
+        };
+        h._hjSettings = {
+          hjid: 3093479,
+          hjsv: 6
+        };
+        a = o.getElementsByTagName('head')[0];
+        r = o.createElement('script');
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
         a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+      })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
 
 
     {%- if settings.favicon != blank -%}
@@ -68,9 +72,17 @@
 
     <title>
       {{ page_title }}
-      {%- if current_tags %} &ndash; tagged "{{ current_tags | join: ', ' }}"{% endif -%}
-      {%- if current_page != 1 %} &ndash; Page {{ current_page }}{% endif -%}
-      {%- unless page_title contains shop.name %} &ndash; {{ shop.name }}{% endunless -%}
+      {%- if current_tags %}
+        &ndash; tagged "{{ current_tags | join: ', ' }}
+        "{% endif -%}
+      {%- if current_page != 1 %}
+        &ndash; Page
+        {{ current_page }}
+      {% endif -%}
+      {%- unless page_title contains shop.name %}
+        &ndash;
+        {{ shop.name }}
+      {% endunless -%}
     </title>
 
     {% if page_description %}
@@ -83,44 +95,88 @@
     {{ content_for_header }}
 
     {%- liquid
-      assign body_font_bold = settings.type_body_font | font_modify: 'weight', 'bold'
-      assign body_font_italic = settings.type_body_font | font_modify: 'style', 'italic'
-      assign body_font_bold_italic = body_font_bold | font_modify: 'style', 'italic'
-    %}
+       assign body_font_bold = settings.type_body_font | font_modify: 'weight', 'bold'
+       assign body_font_italic = settings.type_body_font | font_modify: 'style', 'italic'
+       assign body_font_bold_italic = body_font_bold | font_modify: 'style', 'italic'
+     %}
 
     {% style %}
       {{ settings.type_body_font | font_face: font_display: 'swap' }}
       {{ body_font_bold | font_face: font_display: 'swap' }}
       {{ body_font_italic | font_face: font_display: 'swap' }}
       {{ body_font_bold_italic | font_face: font_display: 'swap' }}
-      {{ settings.type_header_font | font_face: font_display: 'swap' }}
-
-      :root {
-        --font-body-family: {{ settings.type_body_font.family }}, {{ settings.type_body_font.fallback_families }};
+      {{ settings.type_header_font | font_face: font_display: 'swap' }}:root {
+        --font-body-family: 
+        {{ settings.type_body_font.family }},
+        {{ settings.type_body_font.fallback_families }}
+        ;
         --font-body-style: {{ settings.type_body_font.style }};
         --font-body-weight: {{ settings.type_body_font.weight }};
 
-        --font-heading-family: {{ settings.type_header_font.family }}, {{ settings.type_header_font.fallback_families }};
+        --font-heading-family: 
+        {{ settings.type_header_font.family }},
+        {{ settings.type_header_font.fallback_families }}
+        ;
         --font-heading-style: {{ settings.type_header_font.style }};
         --font-heading-weight: {{ settings.type_header_font.weight }};
 
         --font-body-scale: {{ settings.body_scale | divided_by: 100.0 }};
         --font-heading-scale: {{ settings.heading_scale | times: 1.0 | divided_by: settings.body_scale }};
 
-        --color-base-text: {{ settings.colors_text.red }}, {{ settings.colors_text.green }}, {{ settings.colors_text.blue }};
-        --color-shadow: {{ settings.colors_text.red }}, {{ settings.colors_text.green }}, {{ settings.colors_text.blue }};
-        --color-base-background-1: {{ settings.colors_background_1.red }}, {{ settings.colors_background_1.green }}, {{ settings.colors_background_1.blue }};
-        --color-base-background-2: {{ settings.colors_background_2.red }}, {{ settings.colors_background_2.green }}, {{ settings.colors_background_2.blue }};
-        --color-base-solid-button-labels: {{ settings.colors_solid_button_labels.red }}, {{ settings.colors_solid_button_labels.green }}, {{ settings.colors_solid_button_labels.blue }};
-        --color-base-outline-button-labels: {{ settings.colors_outline_button_labels.red }}, {{ settings.colors_outline_button_labels.green }}, {{ settings.colors_outline_button_labels.blue }};
-        --color-base-accent-1: {{ settings.colors_accent_1.red }}, {{ settings.colors_accent_1.green }}, {{ settings.colors_accent_1.blue }};
-        --color-base-accent-2: {{ settings.colors_accent_2.red }}, {{ settings.colors_accent_2.green }}, {{ settings.colors_accent_2.blue }};
+        --color-base-text: 
+        {{ settings.colors_text.red }},
+        {{ settings.colors_text.green }}
+        , {{ settings.colors_text.blue }}
+        ;
+        --color-shadow: 
+        {{ settings.colors_text.red }},
+        {{ settings.colors_text.green }}
+        , {{ settings.colors_text.blue }}
+        ;
+        --color-base-background-1: 
+        {{ settings.colors_background_1.red }},
+        {{ settings.colors_background_1.green }}
+        , {{ settings.colors_background_1.blue }}
+        ;
+        --color-base-background-2: 
+        {{ settings.colors_background_2.red }},
+        {{ settings.colors_background_2.green }}
+        , {{ settings.colors_background_2.blue }}
+        ;
+        --color-base-solid-button-labels: 
+        {{ settings.colors_solid_button_labels.red }},
+        {{ settings.colors_solid_button_labels.green }}
+        , {{ settings.colors_solid_button_labels.blue }}
+        ;
+        --color-base-outline-button-labels: 
+        {{ settings.colors_outline_button_labels.red }},
+        {{ settings.colors_outline_button_labels.green }}
+        , {{ settings.colors_outline_button_labels.blue }}
+        ;
+        --color-base-accent-1: 
+        {{ settings.colors_accent_1.red }},
+        {{ settings.colors_accent_1.green }}
+        , {{ settings.colors_accent_1.blue }}
+        ;
+        --color-base-accent-2: 
+        {{ settings.colors_accent_2.red }},
+        {{ settings.colors_accent_2.green }}
+        , {{ settings.colors_accent_2.blue }}
+        ;
         --payment-terms-background-color: {{ settings.colors_background_1 }};
 
-        --gradient-base-background-1: {% if settings.gradient_background_1 != blank %}{{ settings.gradient_background_1 }}{% else %}{{ settings.colors_background_1 }}{% endif %};
-        --gradient-base-background-2: {% if settings.gradient_background_2 != blank %}{{ settings.gradient_background_2 }}{% else %}{{ settings.colors_background_2 }}{% endif %};
-        --gradient-base-accent-1: {% if settings.gradient_accent_1 != blank %}{{ settings.gradient_accent_1 }}{% else %}{{ settings.colors_accent_1 }}{% endif %};
-        --gradient-base-accent-2: {% if settings.gradient_accent_2 != blank %}{{ settings.gradient_accent_2 }}{% else %}{{ settings.colors_accent_2 }}{% endif %};
+        --gradient-base-background-1: {% if settings.gradient_background_1 != blank %}
+          {{ settings.gradient_background_1 }}{% else %}
+          {{ settings.colors_background_1 }}{% endif %};
+        --gradient-base-background-2: {% if settings.gradient_background_2 != blank %}
+          {{ settings.gradient_background_2 }}{% else %}
+          {{ settings.colors_background_2 }}{% endif %};
+        --gradient-base-accent-1: {% if settings.gradient_accent_1 != blank %}
+          {{ settings.gradient_accent_1 }}{% else %}
+          {{ settings.colors_accent_1 }}{% endif %};
+        --gradient-base-accent-2: {% if settings.gradient_accent_2 != blank %}
+          {{ settings.gradient_accent_2 }}{% else %}
+          {{ settings.colors_accent_2 }}{% endif %};
 
         --media-padding: {{ settings.media_padding }}px;
         --media-border-opacity: {{ settings.media_border_opacity | divided_by: 100.0 }};
@@ -132,7 +188,9 @@
         --media-shadow-blur-radius: {{ settings.media_shadow_blur }}px;
 
         --page-width: {{ settings.page_width | divided_by: 10 }}rem;
-        --page-width-margin: {% if settings.page_width == '1600' %}2{% else %}0{% endif %}rem;
+        --page-width-margin: {% if settings.page_width == '1600' %}
+          2{% else %}
+          0{% endif %}rem;
 
         --card-image-padding: {{ settings.card_image_padding | divided_by: 10.0 }}rem;
         --card-corner-radius: {{ settings.card_corner_radius | divided_by: 10.0 }}rem;
@@ -162,7 +220,9 @@
         --drawer-shadow-blur-radius: {{ settings.drawer_shadow_blur }}px;
 
         --spacing-sections-desktop: {{ settings.spacing_sections }}px;
-        --spacing-sections-mobile: {% if settings.spacing_sections < 24 %}{{ settings.spacing_sections }}{% else %}{{ settings.spacing_sections | times: 0.7 | round | at_least: 20 }}{% endif %}px;
+        --spacing-sections-mobile: {% if settings.spacing_sections < 24 %}
+          {{ settings.spacing_sections }}{% else %}
+          {{ settings.spacing_sections | times: 0.7 | round | at_least: 20 }}{% endif %}px;
 
         --grid-desktop-vertical-spacing: {{ settings.spacing_grid_vertical }}px;
         --grid-desktop-horizontal-spacing: {{ settings.spacing_grid_horizontal }}px;
@@ -178,24 +238,34 @@
         --text-boxes-shadow-blur-radius: {{ settings.text_boxes_shadow_blur }}px;
 
         --buttons-radius: {{ settings.buttons_radius }}px;
-        --buttons-radius-outset: {% if settings.buttons_radius > 0 %}{{ settings.buttons_radius | plus: settings.buttons_border_thickness }}{% else %}0{% endif %}px;
-        --buttons-border-width: {% if settings.buttons_border_opacity > 0 %}{{ settings.buttons_border_thickness }}{% else %}0{% endif %}px;
+        --buttons-radius-outset: {% if settings.buttons_radius > 0 %}
+          {{ settings.buttons_radius | plus: settings.buttons_border_thickness }}{% else %}
+          0{% endif %}px;
+        --buttons-border-width: {% if settings.buttons_border_opacity > 0 %}
+          {{ settings.buttons_border_thickness }}{% else %}
+          0{% endif %}px;
         --buttons-border-opacity: {{ settings.buttons_border_opacity | divided_by: 100.0 }};
         --buttons-shadow-opacity: {{ settings.buttons_shadow_opacity | divided_by: 100.0 }};
         --buttons-shadow-horizontal-offset: {{ settings.buttons_shadow_horizontal_offset }}px;
         --buttons-shadow-vertical-offset: {{ settings.buttons_shadow_vertical_offset }}px;
         --buttons-shadow-blur-radius: {{ settings.buttons_shadow_blur }}px;
-        --buttons-border-offset: {% if settings.buttons_radius > 0 or settings.buttons_shadow_opacity > 0 %}0.3{% else %}0{% endif %}px;
+        --buttons-border-offset: {% if settings.buttons_radius > 0 or settings.buttons_shadow_opacity > 0 %}
+          0.3{% else %}
+          0{% endif %}px;
 
         --inputs-radius: {{ settings.inputs_radius }}px;
         --inputs-border-width: {{ settings.inputs_border_thickness }}px;
         --inputs-border-opacity: {{ settings.inputs_border_opacity | divided_by: 100.0 }};
         --inputs-shadow-opacity: {{ settings.inputs_shadow_opacity | divided_by: 100.0 }};
         --inputs-shadow-horizontal-offset: {{ settings.inputs_shadow_horizontal_offset }}px;
-        --inputs-margin-offset: {% if settings.inputs_shadow_vertical_offset != 0 and settings.inputs_shadow_opacity > 0 %}{{ settings.inputs_shadow_vertical_offset | abs }}{% else %}0{% endif %}px;
+        --inputs-margin-offset: {% if settings.inputs_shadow_vertical_offset != 0 and settings.inputs_shadow_opacity > 0 %}
+          {{ settings.inputs_shadow_vertical_offset | abs }}{% else %}
+          0{% endif %}px;
         --inputs-shadow-vertical-offset: {{ settings.inputs_shadow_vertical_offset }}px;
         --inputs-shadow-blur-radius: {{ settings.inputs_shadow_blur }}px;
-        --inputs-radius-outset: {% if settings.inputs_radius > 0 %}{{ settings.inputs_radius | plus: settings.inputs_border_thickness }}{% else %}0{% endif %}px;
+        --inputs-radius-outset: {% if settings.inputs_radius > 0 %}
+          {{ settings.inputs_radius | plus: settings.inputs_border_thickness }}{% else %}
+          0{% endif %}px;
 
         --variant-pills-radius: {{ settings.variant_pills_radius }}px;
         --variant-pills-border-width: {{ settings.variant_pills_border_thickness }}px;
@@ -252,19 +322,25 @@
       <link rel="stylesheet" href="{{ 'component-predictive-search.css' | asset_url }}" media="print" onload="this.media='all'">
     {%- endif -%}
 
-    <script>document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
-    if (Shopify.designMode) {
-      document.documentElement.classList.add('shopify-design-mode');
-    }
+    <script>
+      document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
+      if (Shopify.designMode) {
+        document.documentElement.classList.add('shopify-design-mode');
+      }
     </script>
-  {% capture boostersnippet %}{% include "booster-apps-common" %}{% endcapture %}{% unless boostersnippet contains "Liquid error" %}{{ boostersnippet }}{% endunless %}
+    {% capture boostersnippet %}
+      {% include "booster-apps-common" %}
+    {% endcapture %}
+    {% unless boostersnippet contains "Liquid error" %}
+      {{ boostersnippet }}
+    {% endunless %}
 
     <!-- Headless team -->
     {{ 'headless.css' | asset_url | stylesheet_tag }}
     <script src="{{ 'headless.js' | asset_url }}" defer="defer"></script>
     <!-- /Headless team -->
 
-</head>
+  </head>
 
   <body class="gradient">
     <!-- 🅷🅴🅰🅳🅻🅴🆂🆂 🆃🅴🅰🅼 -->
@@ -282,7 +358,8 @@
     {% section 'footer' %}
 
     <ul hidden>
-      <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
+      <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}
+      </li>
     </ul>
 
     <script>
@@ -302,14 +379,14 @@
       window.variantStrings = {
         addToCart: `{{ 'products.product.add_to_cart' | t }}`,
         soldOut: `{{ 'products.product.sold_out' | t }}`,
-        unavailable: `{{ 'products.product.unavailable' | t }}`,
+        unavailable: `{{ 'products.product.unavailable' | t }}`
       }
 
       window.accessibilityStrings = {
         imageAvailable: `{{ 'products.product.media.image_available' | t: index: '[index]' }}`,
         shareSuccess: `{{ 'general.share.success_message' | t }}`,
         pauseSlideshow: `{{ 'sections.slideshow.pause_slideshow' | t }}`,
-        playSlideshow: `{{ 'sections.slideshow.play_slideshow' | t }}`,
+        playSlideshow: `{{ 'sections.slideshow.play_slideshow' | t }}`
       }
     </script>
 
@@ -319,6 +396,6 @@
 
 
     {% include 'custom-fonts' %}
-  {% render 'spurit_po2_theme_snippet' %}
-</body>
+    {% render 'spurit_po2_theme_snippet' %}
+  </body>
 </html>
