--- a/sections/rich-text_headless.liquid
+++ b/sections/rich-text_headless.liquid
@@ -1,5 +1,5 @@
 <div>
-  <div class="p-20 h-screen flex flex-col justify-center bg-[url(`{{ section.settings.background_img | image_url: width: 300 }}`)] bg-repeat">
+  <div class="p-20 h-screen flex flex-col justify-center bg-[url('{{ section.settings.background_img | image_url: width: 300 }}')] bg-repeat">
 
     <div class="">
     {% for block in section.blocks %}
